# FrogOCR

./: .gitignore  README.md  frog.service  paddle-frog.py
Project/: CMakeLists.txt
Resources/: database.pg.sql
Resources/Paddle/: Symbols.txt
Resources/Schemas/: alto-4-2.xsd  alto.xsd  xlink.xsd
Source/: Application.cpp  Application.hpp  Confidence.hpp  Config.cpp  Config.hpp  Configuration.cpp  Configuration.hpp  Document.hpp  Image.cpp  Image.hpp  Install.cpp  Install.hpp  IntegratedTextDetector.cpp  IntegratedTextDetector.hpp  Settings.hpp  Task.hpp  TaskProcessor.cpp  TaskProcessor.hpp  TextDetection.cpp  TextDetection.hpp  TextRecognizer.hpp
Source/Alto/: Alto.cpp  Alto.hpp  ComposedBlock.cpp  ComposedBlock.hpp  Description.hpp  Glyph.hpp  Layout.hpp  LoadFromXmlNode.cpp  LoadFromXmlNode.hpp  MeasurementUnit.hpp  Page.hpp  PrintSpace.cpp  PrintSpace.hpp  Processing.hpp  ProcessingSoftware.hpp  SourceImageInformation.hpp  String.cpp  String.hpp  Styles.hpp  TextBlock.cpp  TextBlock.hpp  TextLine.cpp  TextLine.hpp  TextStyle.hpp  Variant.hpp  WriteXml.cpp  WriteXml.hpp
Source/Core/: AnsiEscape.hpp  Buffer.cpp  Buffer.hpp  Filesystem.cpp  Filesystem.hpp  Formatting.hpp  LinuxPlatform.cpp  Log.cpp  Log.hpp  Quad.hpp  SambaClient.cpp  SambaClient.hpp  String.cpp  String.hpp  Timer.cpp  Timer.hpp  WindowsPlatform.cpp
Source/Core/Database/: Connection.cpp  Connection.hpp  QueryResult.cpp  QueryResult.hpp  QueryResultRow.cpp  QueryResultRow.hpp
Source/Core/XML/: Document.cpp  Document.hpp  Library.cpp  Library.hpp  Node.cpp  Node.hpp  Validator.cpp  Validator.hpp
Source/Experimental/: AltoMerger.cpp  AltoMerger.hpp  WordMatcher.cpp  WordMatcher.hpp
Source/HuginMunin/: HuginMuninTextDetector.cpp  HuginMuninTextDetector.hpp  HuginMuninTextRecognizer.cpp  HuginMuninTextRecognizer.hpp
Source/OCR/: Block.hpp  Confidence.hpp  Dataset.hpp  Document.hpp  Engine.cpp  Engine.hpp  Line.hpp  PageSegmentation.hpp  Paragraph.hpp  Scan.cpp  Scan.hpp  Settings.hpp  Symbol.hpp  Word.hpp
Source/Paddle/: PaddleTextAngleClassifier.cpp  PaddleTextAngleClassifier.hpp  PaddleTextDetector.cpp  PaddleTextDetector.hpp  PaddleTextOrientationClassifier.cpp  PaddleTextOrientationClassifier.hpp  Postprocessing.cpp  Postprocessing.hpp  Preprocessing.cpp  Preprocessing.hpp  Recognition.cpp  Recognition.hpp  Structure.cpp  Structure.hpp  clipper.cpp  clipper.hpp  paddleocr.cpp  paddleocr.hpp  utility.cpp  utility.hpp
Source/PostProcess/: Tidy.cpp  Tidy.hpp
Source/PreProcess/: Image.cpp  Image.hpp
Source/Tesseract/: TesseractTextRecognizer.cpp  TesseractTextRecognizer.hpp
